media/hometube/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hometube
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 8501
    targetPort: 8501
  selector:
    app: hometube
